# M.Rajoy

./: .gitignore  README.md  acudits.txt  fitxer.py  frases.txt  index.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml
cogs/: Estado.txt  TopGG.py  chistes.py  encuesta.py  frases.py  jocs.py  mensaje.py  moderacio.py  per_molestar.py  principals.py
webserver/: al.py
